# Backend-NovaSound

./: .gitignore  README.md
.Docker/: Dockerfile.dev
rust/: .gitignore  Cargo.toml
rust/src/: database.rs  errors.rs  lib.rs  main.rs  utils.rs
rust/src/models/: artist_model.rs  mod.rs  song_model.rs
rust/src/routes/: artist_route.rs  mod.rs
rust/src/services/: artist_service.rs  mod.rs
src/: main.rs
