[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
axum-server = "0.7.2"
env_logger = "0.11.8"
function_name = "0.3.0"
log = "0.4.28"
rusqlite = "0.31.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4"] }
